@@ -198,8 +198,9 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 28034) uploading file to local wiki when file exists on shared repository
   (commons) gives spurious info in the warning message
 * Usernames get lost when selecting different sorts on Special:listfiles
-* (Bug 14005) editing section 0 of an existing but empty page gives no such
+* (bug 14005) editing section 0 of an existing but empty page gives no such
   section error
+* (bug 26939) Installer does not set $wgMetaNamespace
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
